crates/vexor-compiler/tests/golden/error/input/if_missing_braces.vx
let r = 100
let c = Circle(r)
// missing braces around branches
let result = if r > 50 c else c
export result
